@@ -1,7 +1,7 @@
 Package: jagsUI
-Version: 1.0
-Date: 2014-5-21
-Title: Run JAGS (specifically, libjags) from R (an alternative user interface for rjags)
+Version: 1.1
+Date: 2014-7-28
+Title: Run JAGS (specifically, libjags) from R; an alternative user interface for rjags
 Author: Ken Kellner <ken@kenkellner.com>
 Maintainer: Ken Kellner <ken@kenkellner.com>
 Depends:
