@@ -11,7 +11,7 @@ exportClasses("jagsUI","jagsUIbasic")
 
 exportMethods("traceplot")
 
-export("jags", "jagsUI","jags.basic","pp.check", "traceplot", 
+export("jags", "jagsUI","jags.basic","autojags","pp.check", "traceplot", 
        "whiskerplot")
 
 S3method("plot", "jagsUI")
