@@ -2,16 +2,24 @@
 run.model <- function(model.file=NULL,data=NULL,inits=NULL,parameters.to.save,n.chains=NULL,
                       n.iter,n.burnin,n.thin,n.adapt,verbose=TRUE,model.object=NULL,update=FALSE){
 
-if(verbose){pb="text"} else {pb="none"}  
+if(verbose){pb="text"} else {pb="none"}
 
 if(update){
   #Recompile model
   m <- model.object
+  if(verbose){
   m$recompile()
+  } else {sink('/dev/null');m$recompile();sink()}
   
 } else {
   #Compile model 
-  m <- jags.model(file=model.file,data=data,inits=inits,n.chains=n.chains,n.adapt=0)
+  
+  if(verbose){
+    m <- jags.model(file=model.file,data=data,inits=inits,n.chains=n.chains,n.adapt=0)
+  } else {
+    sink('/dev/null')
+    m <- jags.model(file=model.file,data=data,inits=inits,n.chains=n.chains,n.adapt=0)
+    sink()}
 }
 
 
