@@ -1,3 +1,7 @@
+# Changes from Version 1.0 to 1.1 [28-July-2014] #
+
+Clean up / modularize code. Add an auto-updating function autojags(). Several small bugfixes.
+
 # Changes from Version 0.01-7 to 1.00 [21-May-2014] #
 
 Update to new package name ('jagsUI'). Implement update function. Bugfixes. Final release prior to CRAN upload.
